# symm-template-reg

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  environment_fracs.txt  pyproject.toml  third_party_modules.json  third_party_revisions.json
configs/: symm_template_reg_baseline.py
docs/: ARCHITECTURE_RU.md  AUGMENTATION_RU.md  CLEANUP_REPORT.md  CONDITIONED_POSE_RUNBOOK.md  CONDITIONED_POSE_V2_RUNBOOK.md  COORDINATE_GUIDED_CANDIDATE_RUNBOOK.md  COORDINATE_GUIDED_SURFACE_RUNBOOK.md  CORRESPONDENCE_HEAD_DIAGNOSTIC_RUNBOOK.md  CORRESPONDENCE_HEAD_V4_RUNBOOK.md  CORRESPONDENCE_PROCRUSTES_RUNBOOK.md  CUDA_ENVIRONMENT_FIX.md  DATASET_FORMAT.md  DATASET_RU.md  DEBUG_TRAINING_V2_AUDIT.md  ENVIRONMENT_COMPATIBILITY.md  FINE_CORRESPONDENCE_FEATURE_RUNBOOK.md  FOUR_FRAGMENTS_FOUR_VIEWS_PERFORMANCE_RUNBOOK.md  FOUR_FRAGMENTS_FOUR_VIEWS_RUNBOOK.md  INFERENCE_RU.md  ITERATION1_REPORT.md  JOINT_CORRESPONDENCE_POSE_RUNBOOK.md  LOCAL_CORRESPONDENCE_STAGE_RUNBOOK.md  MODULE_PORTING_PLAN.md  POSE_VIEW_LADDER_RUNBOOK.md  ROTATION_VIEWPOINT_NEXT_STEP.md  SINGLE_FRAGMENT_OVERFIT_RUNBOOK.md  SYMMETRY_DEBUG.md  SYMMETRY_RU.md  TEN_VIEW_SCRATCH_RUNBOOK.md  TEST_OVERFIT_FACES840.md  THIRD_PARTY_AUDIT.md  THIRD_PARTY_NOTICES.md  TRAINING_CONTRACT.md  TRAINING_RU.md
examples/: object_000004__scale_0p05.symmetry.example.json  object_000004__scale_0p05.symmetry.json
schemas/: template_symmetry.schema.json
symm_template_reg/: __init__.py  config.py  registry.py
tests/: README.md  boundary_augmentation_test_utils.py  clean_v3_test_utils.py  conditioned_test_utils.py  dataset_test_utils.py  (+329 more)
(+365 files in other folders)
