[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "symm-template-reg"
version = "0.1.0"
description = "Modular symmetry-aware fragment-to-template registration research baseline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "symm-template-reg contributors"}]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "tqdm>=4.65",
]

[tool.setuptools.packages.find]
include = ["symm_template_reg*"]
